# codeindex_java

./: .gitignore
hybrid_platform/: .dockerignore  README.md  pyproject.toml  requirements.txt
hybrid_platform/config/: default_config.json  java_eval_deterministic_config.json  java_eval_http_118_196_65_175_config.json  java_eval_manifest_ge100k_overrides.json  java_eval_vllm_bge_m3_config.json
hybrid_platform/docs/: ARCHITECTURE_MODULES.md  HANDOVER_JAVA_INDEX_AND_MCP.md  IMPLEMENTATION_REPORT.md  JAVA_INDEX_EVAL_RUNBOOK.md  SPECS_VS_IMPLEMENTATION.md  config_reference.md  deploy_public_mcp_edge_proxy.md  embedding_model_comparison.md  index_accuracy_eval.md  java_eval_index_prep.md  java_index_repo_setup.md  lancedb_migration_playbook.md  mcp_agent_integration_delivery.md  mcp_delivery_handbook.md  mcp_metadata_and_errors.md  mcp_streamable_http.md  mcp_tools_remote_agent.md  ready_27_indices_infcode_mcp.md  retrieval_compare_eval.md  scip_java_maven_edge_cases.md  server_agent_runbook.md  spring_embedding_eval_2026_05_07_runbook.md  spring_framework_eval_embedding_runbook.md
hybrid_platform/eval/: run_acceptance.py  run_embedding_benchmark.py  run_grep_query_jsonl.py
hybrid_platform/examples/: Caddyfile.mcp_edge  eval_dataset.json  grep_query.jsonl  index_metadata.example.json  kubernetes_ingress_mcp_streamable.yaml  lucene_entity_eval_dataset.json  mcp_edge_internal_listen.env.example  mcp_streamable_test.env.example  netty_entity_eval_dataset.json  netty_eval_dataset.json  nginx_mcp_streamable_http.conf  queries_20.json  sample.scip.ndjson  (+3 more)
(+112 files in other folders)
