[project]
name = "scip-hybrid-platform"
version = "0.1.0"
description = "SCIP-based hybrid retrieval reference implementation"
requires-python = ">=3.10"
dependencies = [
    "protobuf>=4.25",
    "tokenizers",
    "litellm",
    "lancedb",
    "llama-index-core",
    "llama-index-embeddings-openai",
    "llama-index-embeddings-voyageai",
    "tree-sitter",
    "tree-sitter-java",
    "tqdm",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
